--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
 u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody,
+label, legend, table, caption, tbody,
 tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
@@ -44,6 +44,12 @@ body {
 
 ol, ul {
 	list-style: none;
+}
+
+form {
+	padding-left: 5;
+	padding-right: 5;
+	margin: 2;
 }
 
 blockquote, q {
@@ -2645,20 +2651,4 @@ input, select, textarea {
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
-}
-
-#application:link {
-	color: red;
-}
-
-#application:visited {
-	color: green
-}
-
-#application:hover {
-	color: hotpink;
-}
-
-#application:active {
-	color: blue;
 }
