Added Discord Rules Quiz
Rules Quiz Beta v1.0 added.
-Banner added to top
-Command added
-Check mark image added
-Questions added
-login.html removed
-landing.html changed

--- a/ditle/assets/css/ditle.css
+++ b/ditle/assets/css/ditle.css
@@ -2555,8 +2555,7 @@ input, select, textarea {
 /* selected link */
 #application:active {
     color: blue;
-=======
-* {box-sizing:border-box}
+    box-sizing:border-box}
 
 /*Resouces Text*/
 #linktext {
