--- a/discord/assets/css/login.css
+++ b/discord/assets/css/login.css
@@ -37,6 +37,7 @@ h1 {
 h2 {
 	font-size: 20px;
 }
+
 /* Banner */
 #banner {
 	position: absolute;
@@ -50,8 +51,15 @@ h2 {
   #banner_contents {
 	width: 500px;
   }
+  #bannerimg {
+	padding-top:5;
+	padding-left:5;
+	width:50px;
+	height:50px;
+  }
+
 /* Icons */
-  .icon {
+.icon {
 	position: relative;
 	text-decoration: none;
 }
@@ -69,10 +77,10 @@ h2 {
 		display: none;
 	}
 
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	button,
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+button,
 	.button {
 		-moz-transition: all 0.50s ease-in-out;
 		-webkit-transition: all 0.50s ease-in-out;
